# DarkScryC2

./: .env  .env.example  .gitignore  docker-compose.ssl.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  server.py  test.py  tsconfig.json
CryptographyHelper/: CryptographyHelper.vcxproj  framework.h
DarkScryC2Managment/: _test.py  manage.py  remove_pycache.py
DarkScryC2Managment/DarkScryC2Managment/: arq_worker.py  asgi.py  settings.py  urls.py  wsgi.py
DarkScryC2Managment/application/: models.py
DarkScryC2Server/: __init__.py
DarkScryC2Server/Cryptography/: Symetric.py
DarkScryC2Server/Managers/: connection_manager.py  keep_alive_manager.py  redis_manager.py
DarkScryC2Server/Models/: protocols.py  remote_tools_schemas.py  schemas.py
DarkScryC2Server/Server/: Server.py
DarkScryC2Server/settings/: config.py
DarkScryClient/: DarkScryClient.sln
DarkScryClient/CPPUtils/: CPPUtils.vcxproj
DarkScryClient/DarkScryClient/: Config.cs  DarkScryClient.csproj  DarkScryClient.sln  Program.cs
DarkScryClient/Injections/: Injections.vcxproj  Injections.vcxproj.filters  framework.h  remote_thread_injections.cpp
DarkScryClient/UserTools/: UserTools.csproj
DarkScryClient/UserUtils/: Class1.cs
DarkScryClient/Utils/: NativeMethods.cs
app/: page.tsx
c2server/: .gitignore  Dockerfile  pyproject.toml
c2server/darkscryc2server/: __init__.py  run_with_remote_manager.py
c2server/darkscryc2server/Cryptography/: Symetric.py
c2server/darkscryc2server/Managers/: connection_manager.py  wsbased_connection.py
c2server/darkscryc2server/Models/: remote_tools_schemas.py
c2server/darkscryc2server/Server/: Server.py
c2server/darkscryc2server/Utils/: __init__.py  tools.py
c2server/darkscryc2server/Utils/remote_utils/: commands.py
c2server/darkscryc2server/remote_manager/: remote_manager.py
c2server/darkscryc2server/settings/: config.py
c2server/scripts/: remove_pycache.py
client/: README.md
components/: Sidebar.tsx
darkscryc2server/: run_with_remote_manager.py
darkscryc2server1/: run_with_remote_manager.py
django/: DockerFile  Dockerfile  docker-entrypoint.sh  init-env.sh  pyproject.toml
dockerfiles/: arq.dockerfile
frontend/: Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json
lib/: axios.ts  custome_effects.js  fetchApi.ts  fetchApiClient.ts  models.ts  types.ts  useUserApi.ts
style/: components.Sidebar.css
types/: axios.d.ts  next-auth.d.ts
utils/: files.ts
(+193 files in other folders)
